# OpenVetSim

./: .gitignore  CLAUDE.md  README.md  winvetsim.ini
OpenVetSim/: CMakeLists.txt  README.md  VetSim.cpp  WebSrv.cpp  WinVetSim.vcxproj  WinVetSim.vcxproj.filters  XMLRead.cpp  XMLRead.h  bcastServer.cpp  cgiClass.cpp  keys.cpp  main.cpp  platform.h  pulse.cpp  queryInfo.cpp  scenario.cpp  scenario_xml.cpp  sim-parse.cpp  simlog.cpp  simmgrVideo.cpp  simstatus.cpp  simutil.cpp  soundInit.cpp  vetsim.h
OpenVetSim-App/: loading.html  main.js  package-lock.json  package.json  preload.js
scenarios/Example_Scenario/: layout.json  main.xml
scenarios/blank/: main.xml
scenarios/default/: main.xml
scenarios/healthy_dog/: layout.json  main.xml
scripts/: download-php.ps1  download-php.sh
sim-ii/: .htaccess  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  beats.php  check.php  hostCheck.php  ii-demo.php  ii.php  index.php  init.php  obsControl.html  router.php  vitals-demo.php  vitals.php
sim-ii/ajax/: ajaxAddScenario.php  ajaxCheckScenarioExited.php  ajaxCheckVideoRecording.php  ajaxCheckVideoStopped.php  ajaxGetChestRiseControlContent.php  ajaxGetCntrlStat.php  ajaxGetEventsList.php  ajaxGetEventsLog.php  ajaxGetHeartRhythmContent.php  ajaxGetHeartSoundContent.php  ajaxGetLungSoundContent.php  ajaxGetNBPControlContent.php  ajaxGetPatientInformation.php  ajaxGetPulseStrengthControlContent.php  ajaxGetScenario.php  ajaxGetScenarioTableContent.php  ajaxGetSingleControlContent.php  ajaxGetTperiControlContent.php  ajaxGetUserTableContent.php  ajaxGetVocalsControlContent.php  ajaxStartDemo.php  ajaxTap.php  ajaxUpdateUser.php
sim-ii/css/: common.css  controls.css  jquery.mobile.custom.structure.css  mobilize.css  modal.css  modal.css.bak  whitespace-reset.css
sim-ii/includes/: header.php  phpDefinesToJs.php
sim-ii/includes/classes/: admin.class.php  adminWin.class.php  controls.class.php  db.class.php  file.class.php  log.class.php  mail.class.php  model.class.php  query.class.php  scenarioXML.class.php
sim-ii/js/: buttons.js  chart.js  chestSensor.js  controls.js  demo.js  events.js  functions.js  log.js  media.js  modal.js  profile.js  scenario.js  simmgr.js  simsound.js  telesim.js  user.js
sim-ii/scripts/: hotkeys.js  jquery-ui-touch.js  obs-websocket-5.js  obs-websocket.js
sim-ii/scripts/jquery-ui/1.11.4/: jquery-ui.min.css  jquery-ui.theme.min.css
sim-mgr/: Makefile
sim-mgr/src/: scenario.cpp
sim-player/: README.md  gpl.html  index.php  init.php  player.php  video.php
sim-player/ajax/: ajaxGetEventsList.php  ajaxGetLogTableContent.php
sim-player/css/: common.css  jquery.mobile.custom.theme.css  modal.css
sim-player/includes/: header.php  phpDefinesToJs.php
sim-player/includes/classes/: admin.class.php  controls.class.php  db.class.php  dbWin.class.php  file.class.php  log.class.php  mail.class.php  model.class.php  query.class.php  scenarioXML.class.php
sim-player/js/: eventLog.js  menu.js  modal.js  vid.js
sim-player/scripts/: jquery.mobile.custom.min.js
sim-player/scripts/jquery-ui/1.11.4/: jquery-ui.css
